# AutoSO

./: .env.example  .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml
autoso/: config.py
autoso/bot/: auth.py  handlers.py  main.py
autoso/diagnostics/: analyze.py  scrape.py  telegram.py
autoso/pipeline/: analysis.py  citation.py  flatten.py  holy_grail.py  indexer.py  llm.py  pipeline.py  pool.py  prompt_analysis.py  prompts.py  rag_analysis.py  run_analysis.py  scaling.py  title.py
autoso/scraping/: __init__.py  base.py  facebook.py  hardwarezone.py  instagram.py  models.py  playwright_base.py  reddit.py  tiktok.py  youtube.py
autoso/storage/: supabase.py
autoso/transcription/: docx_output.py  downloader.py  transcriber.py  transcription.py
autoso/ui/: app.py
data/holy_grail/: holy_grail_apr_jul_2025.md  holy_grail_aug_sep_2025.md  holy_grail_general.md
data/holy_grail_raw/: ASO Holy Grail.docx  Bucket Holy Grail (Apr-Jul 2025).docx  Bucket Holy Grail (Aug-Sep 2025).docx  Bucket Holy Grail (General).docx  Bucket Holy Grail (NDP 2024 + 2025).docx  Bucket Holy Grail (Oct-Nov 2025).docx  holy_grail_ndp_2024_2025.md  holy_grail_oct_nov_2025.md
migrations/: 001_initial_schema.sql  002_transcripts_table.sql  003_scrapes_table.sql  004_multi_url_analysis.sql
scripts/: ingest_holy_grail.py
tests/: conftest.py  test_auth.py  test_config.py
tests/integration/: _helpers.py  conftest.py  data.py  test_analyze.py  test_scrape.py  test_telegram.py
tests/test_bot/: test_handlers.py
tests/test_pipeline/: conftest.py  test_citation.py  test_llm.py  (+10 more)
(+31 files in other folders)
